tests/invalid/user_field_access_decl_override2.err_exp
user_field_access_decl_override2.m:028: In clause for function `get_foo_f1'/1:
user_field_access_decl_override2.m:028:   in unification of [38;5;87mvariable `X'[39;49m
user_field_access_decl_override2.m:028:   and term [38;5;87m`f1(Foo)':[39;49m
user_field_access_decl_override2.m:028:   type error in argument of functor
user_field_access_decl_override2.m:028:   `f1'/1.
user_field_access_decl_override2.m:028:   [38;5;87mArgument 1 (Foo)[39;49m has type
user_field_access_decl_override2.m:028:     [38;5;203msome [T] ([39;49m
user_field_access_decl_override2.m:028:       [38;5;203muser_field_access_decl_override2.foo([39;49m
user_field_access_decl_override2.m:028:         [38;5;203mT[39;49m
user_field_access_decl_override2.m:028:       [38;5;203m)[39;49m
user_field_access_decl_override2.m:028:     [38;5;203m),[39;49m
user_field_access_decl_override2.m:028:   expected type was
user_field_access_decl_override2.m:028:     [38;5;40muser_field_access_decl_override2.foo([39;49m
user_field_access_decl_override2.m:028:       [38;5;40mint[39;49m
user_field_access_decl_override2.m:028:     [38;5;40m).[39;49m
user_field_access_decl_override2.m:035: In clause for predicate `set_foo_f1'/3:
user_field_access_decl_override2.m:035:   type error in unification of variable
user_field_access_decl_override2.m:035:   `STATE_VARIABLE_Foo'
user_field_access_decl_override2.m:035:   and functor `f1 :='/2.
user_field_access_decl_override2.m:035:   [38;5;87mvariable `STATE_VARIABLE_Foo'[39;49m has
user_field_access_decl_override2.m:035:   type
user_field_access_decl_override2.m:035:     [38;5;203msome [T] ([39;49m
user_field_access_decl_override2.m:035:       [38;5;203muser_field_access_decl_override2.foo([39;49m
user_field_access_decl_override2.m:035:         [38;5;203mT[39;49m
user_field_access_decl_override2.m:035:       [38;5;203m)[39;49m
user_field_access_decl_override2.m:035:     [38;5;203m),[39;49m
user_field_access_decl_override2.m:035:   [38;5;87mfunctor `f1 :='/2[39;49m has type
user_field_access_decl_override2.m:035:     [38;5;40m`f1 :='([39;49m
user_field_access_decl_override2.m:035:       [38;5;40muser_field_access_decl_override2.foo([39;49m
user_field_access_decl_override2.m:035:         [38;5;40mint[39;49m
user_field_access_decl_override2.m:035:       [38;5;40m),[39;49m
user_field_access_decl_override2.m:035:       [38;5;40mint[39;49m
user_field_access_decl_override2.m:035:     [38;5;40m):[39;49m
user_field_access_decl_override2.m:035:     [38;5;40muser_field_access_decl_override2.foo([39;49m
user_field_access_decl_override2.m:035:       [38;5;40mint[39;49m
user_field_access_decl_override2.m:035:     [38;5;40m).[39;49m
For more information, recompile with `-E'.
